# labs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  mise.toml
.mise/tasks/readme/: build
.mise/tasks/test-assets/: download
2026/07/03/silero-vad/: .gitignore  README.md  main.py  metadata.json  pyproject.toml
2026/07/04/pyannote-scd/: .gitignore  README.md  main.py  metadata.json  pyproject.toml
2026/07/05/ecapa-tdnn-onnx/: README.md  main.py  metadata.json  pyproject.toml
2026/07/06/clap-onnx-esc50/: .gitignore  README.md  export_model.py  main.py  metadata.json  pyproject.toml
2026/07/06/clap-onnx-esc50/.mise/tasks/: default
2026/07/07/yamnet-esc50-audio-tagging/: README.md  main.py  metadata.json  pyproject.toml
2026/07/08/yunet-face-detection/: .gitignore  README.md  hello.py  main.py  metadata.json  pyproject.toml
2026/07/09/dfine-object-detection/: .gitignore  README.md  main.py  metadata.json  pyproject.toml
2026/07/10/sface-face-embedding/: .gitignore  README.md  main.py  metadata.json  pyproject.toml
2026/07/10/sface-face-embedding/.mise/tasks/: default
2026/07/11/anigen-mac/: .gitignore  README.md  metadata.json  mise.toml  package-lock.json  package.json  viewer.html
2026/07/11/anigen-mac/patches/: flexicubes-diagnostics.patch  mps-large-mask-indexing.patch
2026/07/11/anigen-mac/scripts/: contact_sheet.py  environment.py  render-preview.mjs  validate.py
2026/07/12/pp-ocrv6-small-rapidocr/: .gitignore  README.md  main.py  metadata.json  pyproject.toml
2026/07/13/birefnet-onnx/: .gitignore  README.md  main.py  metadata.json  pyproject.toml
2026/07/14/yolo26-semantic-segmentation/: .gitignore  README.md  main.py  metadata.json  pyproject.toml
2026/07/14/yolo26-semantic-segmentation/.mise/tasks/: default
2026/07/15/zipdepth-apple-silicon/: .gitignore  README.md  main.py  metadata.json  pyproject.toml
2026/07/15/zipdepth-apple-silicon/.mise/tasks/: default
2026/07/16/moge2-surface-normal-apple-silicon/: .gitignore  README.md  main.py  metadata.json  pyproject.toml  render_blender.py
2026/07/16/moge2-surface-normal-apple-silicon/.mise/tasks/: default  render-miineko-videos  render-video
2026/07/17/yamnet-streaming-novelty/: .gitignore  README.md  main.py  metadata.json  pyproject.toml
2026/07/18/mediapipe-holistic-vrm/: .gitignore  .mise.toml  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json
2026/07/19/meanvc-streaming-apple-silicon/: .gitignore  README.md  demo_server.py  main.py  metadata.json  pyproject.toml
2026/07/19/meanvc-streaming-apple-silicon/.mise/tasks/: default  demo
2026/07/19/meanvc-streaming-apple-silicon/web/: index.html
2026/07/20/apple-speech-analyzer-streaming-asr/: .gitignore  Package.swift  README.md  demo_server.py  metadata.json  pyproject.toml  reference.txt  test_demo_server.py
2026/07/21/pytorch-2-13-flexattention-mps/: README.md  benchmark.py  metadata.json  pyproject.toml  test_benchmark.py
2026/07/22/executorch-mlx-qwen3/: .gitignore  README.md  benchmark.py  config.py  export_models.py  metadata.json  pyproject.toml  test_benchmark.py
2026/07/22/executorch-mlx-qwen3/.mise/tasks/: benchmark  default  export  probe-torch-2-13
2026/07/22/laguna-s2-1-oQ2e-m1-max/: README.md  benchmark.py  metadata.json  pyproject.toml  results-clean.json  results.json  test_benchmark.py
2026/07/22/laguna-s2-1-oQ2e-m1-max/.mise/tasks/: default  test
2026/07/23/unreal-audio-localization/: README.md  mcp-operations.json  metadata.json  verify.py
docs/: test-assets.md
tags/: 3d.md  anigen.md  animation.md  anomaly-detection.md  apple-silicon.md  asr.md  audio-mixer.md  audio-tagging.md  audio.md  background-removal.md  benchmark.md  binaural.md  birefnet.md  clap.md  depth-estimation.md  detection.md  dfine.md  ecapa-tdnn.md  embedding.md  esc-50.md  executorch.md  face.md  flex-attention.md  gcc.md  hrtf.md  image.md  laguna-s2-1.md  llm.md  mcp.md  meanvc.md  mediapipe.md  mlx.md  moge-2.md  mps.md  object-detection.md  ocr.md  onnx-runtime.md  onnx.md  opencv.md  pose-estimation.md  (+29 more)
(+53 files in other folders)
