[project]
name = "sface-face-embedding"
version = "0.1.0"
description = "SFace face embedding dataset comparison"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.0",
]
