[project]
name = "yolo26-semantic-segmentation"
version = "0.1.0"
description = "YOLO26 semantic segmentation PyTorch and ONNX comparison"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "onnx>=1.20.0",
    "onnxruntime>=1.27.0",
    "opencv-python>=4.11.0.86",
    "ultralytics==8.4.95",
]
