[project]
name = "zipdepth-apple-silicon"
version = "0.1.0"
description = "ZipDepth PyTorch MPS, CPU, and ONNX Runtime comparison"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "onnx>=1.20.0",
    "onnxscript>=0.5.6",
    "onnxruntime>=1.27.0",
    "opencv-python-headless>=4.11.0.86",
    "torch>=2.7.1",
    "zipdepth @ git+https://github.com/fabiotosi92/ZipDepth.git@a302e5437bc58f15c4efd41d3e8222bf24f7d470",
]
