[project]
name = "meanvc-streaming-apple-silicon"
version = "0.1.0"
description = "Measure MeanVC streaming zero-shot voice conversion on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gdown==5.2.0",
    "librosa==0.10.2.post1",
    "numpy==1.26.4",
    "onnxruntime==1.27.0",
    "pyyaml==6.0.3",
    "soundfile==0.13.1",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "tqdm==4.67.1",
]

[tool.uv]
package = false
