[project]
name = "executorch-mlx-qwen3"
version = "0.1.0"
description = "Benchmark the ExecuTorch MLX delegate with Qwen3 on Apple Silicon"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "executorch==1.3.1",
    "huggingface-hub==0.36.2",
    "optimum-executorch==0.1.0",
    "psutil==7.2.2",
    "torch==2.12.1",
    "transformers==4.56.1",
]

[tool.uv]
package = false
