[project]
name = "laguna-s2-1-oq2e-m1-max"
version = "0.1.0"
description = "Reproduce the Laguna S 2.1 oQ2e quant profile and measure TTFT on a 64 GB M1 Max"
requires-python = ">=3.13,<3.14"
dependencies = [
    "huggingface-hub==1.24.0",
    "mlx==0.32.0",
    "mlx-vlm==0.6.6",
    "psutil==7.2.2",
    "transformers==5.14.1",
]

[tool.uv]
package = false
